--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "@types/react-router": "^5.1.20",
     "axios": "^0.26.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.8.0",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
     "typescript": "^4.6.2",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2"
+    "@types/react-router-dom": "^5.3.3",
+    "eslint": "^8.33.0"
   }
 }
