--- a/package.json
+++ b/package.json
@@ -11,18 +11,14 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.13",
     "@types/react-router": "^5.1.20",
     "axios": "^0.26.1",
+    "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.8.0",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
-    "typescript": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,7 +46,12 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
+    "@types/node": "^18.14.6",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
-    "eslint": "^8.33.0"
+    "eslint": "^8.33.0",
+    "typescript": "^4.9.5"
   }
 }
