--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "history": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.43.9",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.0",
