--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mui/lab": "^5.0.0-alpha.80",
     "@mui/material": "^5.6.4",
     "@reduxjs/toolkit": "^1.9.3",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.5",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
